--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  local_auth: ^1.1.7
+  velocity_x: ^3.3.0
+  hive: ^2.0.4
+  flutter_secure_storage: 5.0.0-beta.5
+  hive_flutter: ^1.1.0
+  flutter_hooks: ^0.18.0
+  rxdart: ^0.27.2
+  url_launcher: ^6.0.10
+  dio: ^4.0.0
+  json_serializable: ^5.0.1
+  flutter_html: ^2.1.2
+  crypto:
+  flutter_inapp_purchase:
+  flutter_triple:
+
+
 
 dev_dependencies:
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^1.1.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
